[package]
name = "rust-wasm-encrypt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
rand = "0.8.5"
rsa = "0.9.6"
getrandom = { version = "0.2.12", features = ["js"] }
wasm-bindgen = "0.2.90"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.67"

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
